Add photo for user model
